Address review comments
Signed-off-by: Christian Tzolov <christian.tzolov@broadcom.com>